--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,74 @@
-body {
-  background-color: orange;
+body{
+  background-color: #505050;
+}
+
+#nav {
+  background-color: #afafaf;
+  border-radius: 30px;
+  max-width: 600px;
+  overflow-wrap:break-word;
+  margin: auto;
+  padding: 2px 0px;
+}
+
+#links {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+#links a{
+  font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  background-color: #e6e6e6;
+  padding: 12px;
+  border: 2px rgb(82, 82, 82) solid;
+  border-radius: 20px;
+  color: #303280;
+}
+
+#links a:hover {
+  background-color: aqua;
 }
 
 #main {
- background-color: gray;
+  display:flex;
+  background-color: #cccccc;
+  margin-top: 10px;
+  border-radius: 50px;
+  max-height: 95vh;
+  padding-left: 8%;
+  padding-right: 8%;
+  align-items: center;
 }
 
-#lorem {
-  text-align: center;
-  border: 5px solid black;
-
+#selfie {
+  margin: 10px;
+  padding: 15px;
+  border-radius: 50px;
+  max-height: 80vh;
 }
 
+#content{
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 20px;
+  margin: 3%;
+  max-width: auto;
+  max-height: 80vh;
+  overflow-x: auto;
+}
 
+p{
+  text-indent: 2em;
+}
+
+#content::-webkit-scrollbar {
+  display: none; /* Chromium */
+}
+
+.example {
+  -ms-overflow-style: none;  /* IE / Edge */
+  scrollbar-width: none;  /* Firefox */
+}
