--- a/css/altStyles.css
+++ b/css/altStyles.css
@@ -100,17 +100,18 @@ body{
 summary{
     text-decoration: none;
     background-color: #525280;
-    width:80%;
+    width:95%;
     margin:auto;
     padding: 5px;
 }
 
 .insides{
     background-color: white;
-   width:80%;
+   width:95%;
    margin:auto;
    padding: 5px;
 }
+
 #side{
     flex: 40%;
     background-color: black;
@@ -140,7 +141,7 @@ summary{
     text-decoration: line-through;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1600px) {
        
     #henshin {
         display:flex;
@@ -150,7 +151,7 @@ summary{
    #henshin button{
         font-size: 20px;
         border-radius: 0px;
-        margin: 0px 30px;
+        margin: 0px 20px;
         padding: 10px 40px;
         border: none;
         color: white;
@@ -160,9 +161,12 @@ summary{
 
     #container{
     display: flex;
-    flex-direction: column;
     margin: 10px auto;
    }
+
+}
+
+@media screen and (max-width: 1200px) {
 
    #side {
     display: none;
@@ -170,7 +174,7 @@ summary{
 
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 800px) {
   body {
     margin: 0;
   }
@@ -205,9 +209,6 @@ summary{
     margin: 0px 8px;
     border: none;
     padding: 10px 20px;
-    color: white;
-    background-color: rgb(138, 86, 129);
-    transition: 0.3s;
     }
 
    #textBody{
@@ -219,4 +220,17 @@ summary{
     padding: 3px;
     text-align: center;
 }
+
+}
+
+@media screen and (max-width: 500px) {
+
+    #henshin {
+    justify-content: center;
+   }
+
+   #henshin button{
+    font-size: 12px;
+    padding: 10px 20px;
+    }
 }
